# eqprop

./: LANGUAGE_MODELS.md  NEBC.md  README.md  SGD.md  SUMMARY.md  TODO.md  architecture_experiments.py  benchmark_gpu_fair.py  benchmark_gpu_kernel.py  benchmark_kernel.py  bio_trainer_gui.py  capabilities_demo.py  evolve.py  evolve_production.py  hyperopt_dashboard.py  hyperparam_search.py  mechanics_demo.py  nebc_systematic_experiments.py  pyproject.toml  quick_nebc_verify.py  requirements.txt  run_evaluation.py  sn_analysis.py  speed_benchmark.py  test_depth_signal.py  test_kernel_diagnostic.py  test_new_tracks.py  test_shallow.py  verify.py  verify_track37.py
algorithms/: README.md  __init__.py  ada_fa.py  base.py  cf_align.py  eg_fa.py  em_fa.py  eq_align.py  eqprop.py  feedback_align.py  leq_fa.py  mom_eq.py  pc_hybrid.py  sparse_eq.py  sto_fa.py
archive/: README.md  cifar_rapid_analysis.py  cifar_scaling_analysis.py  compare_enhanced.py  compare_pytorch_kernel.py  debug_kernel.py  definitive_2025_comparison.py  loopedmlp_sweep.py  research.py  research_config.yaml  sn_stress_test.py  test_2025_variants.py  test_kernel.py  toreq.py
doc/: FINDINGS_AND_PATH_FORWARD.md  IDEA.HTSEP.md  IDEA.TCEP.md  IDEA.TEPSSR.md  IDEA.TPEqProp.md  IDEA.TorEqODEProp.md  INSIGHTS.md  LOCAL_HEBBIAN.md  MAXIMIZING_IMPACT.md  MEMORY_ANALYSIS.md  PRIOR_ART.md  PUBLICATION_SUMMARY.md  QUICKSTART.md  RESEARCH_STATUS.md  RESEARCH_SYSTEM_ARCHITECTURE.md  RESULTS.md  SCIENTIFIC_SCOPE.md  SPEED_ANALYSIS.md  TODO.md  TODO6.md  TODO7.md
eqprop_torch/: ARCHITECTURE.md  README.md  __init__.py  acceleration.py  bioplausible.py  config.py  core.py  datasets.py  generation.py  kernel.py  lm_models.py  models.py  utils.py
eqprop_trainer/: README.md  __init__.py  __main__.py  config.py  dashboard.py  dashboard_helpers.py  experiment_scheduler.py  generation.py  hyperopt_dashboard.py  hyperopt_worker.py  hyperparams.py  main.py  themes.py  viz_utils.py  worker.py
evolution/: ARCHITECTURE.md  __init__.py  algorithm.py  algorithm_model.py  base.py  breakthrough.py  breeder.py  config.py  engine.py  evaluator.py  fitness.py  models.py  multitask.py  pareto.py  rl_adapter.py  utils.py
examples/: simple_transfer.py  (+2 more)
(+465 files in other folders)
